# Amaranth

./: .clang-tidy  .env  .geminiignore  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
cycle/: CMakeLists.txt  CycleDefs.h  README.md  installer.json
cycle-v2/: CMakeLists.txt  README.md
cycle-v2/resources/: Info.plist  default.cyclegraph  fft-sawtooth.cyclegraph  with-spies.cyclegraph
cycle-v2/src/: Main.cpp
cycle-v2/src/App/: CycleV2Automation.cpp  CycleV2Automation.h
cycle-v2/src/Graph/: GraphCommandDispatcher.cpp  GraphCommandDispatcher.h  GraphCompiler.cpp  GraphCompiler.h  GraphDocument.cpp  GraphDocument.h  GraphDomainResolver.cpp  GraphDomainResolver.h  GraphEditor.cpp  GraphEditor.h  GraphNodeFactory.cpp  GraphNodeFactory.h  GraphRenderSemanticResolver.cpp  GraphRenderSemanticResolver.h  GraphSerializer.cpp  GraphSerializer.h  GraphTransaction.cpp  GraphTransaction.h  GraphValidator.cpp  GraphValidator.h  NodeDefinition.cpp  NodeDefinition.h  NodeGraph.cpp  NodeGraph.h  NodeModelDecodeDiagnostics.h
cycle-v2/src/Runtime/: AudioProcessContextUtils.h  AudioProcessTypes.h  AudioProcessorFactories.h  BasicNodeAudioProcessors.cpp  BinarySignalProcessor.h  CurvePreviewProcessors.cpp  EffectNodeAudioProcessors.cpp  FingerprintBuilder.h  GraphAudioExecutor.cpp  GraphAudioExecutor.h  GraphInvalidation.cpp  GraphInvalidation.h  GraphPresentationModel.cpp  GraphPresentationModel.h  GraphPreviewExecutor.cpp  GraphPreviewExecutor.h  GraphRuntime.cpp  GraphRuntime.h  MessageThreadWorker.h  MonitorPreviewProcessors.cpp  NodeAudioProcessor.cpp  NodeAudioProcessor.h  NodeAudioProcessorSupport.cpp  NodeAudioProcessorSupport.h  NodeDspConfiguration.cpp  NodeDspConfiguration.h  NodeModuleRegistry.cpp  NodeModuleRegistry.h  NodePreviewProcessor.cpp  NodePreviewProcessor.h  NodeUpdateGraph.cpp  NodeUpdateGraph.h  PreviewProcessorFactories.h  SmoothedMorphPosition.h  SourcePreviewProcessors.cpp  TransformNodeAudioProcessors.cpp  TrimeshNodeAudioProcessor.cpp  TrimeshNodePreviewProcessor.cpp  UnarySignalProcessor.h
cycle-v2/src/UI/: ConcreteNodeEditors.cpp  NodeAutomationFacade.cpp  NodeAutomationFacade.h  NodeCableRenderer.cpp  NodeCableRenderer.h  NodeCanvas.cpp  NodeCanvas.h  NodeCanvasAuthoring.cpp  NodeCanvasAuthoring.h  NodeCanvasAutomationController.cpp  NodeCanvasAutomationController.h  NodeCanvasAutomationInspector.cpp  NodeCanvasAutomationInspector.h  NodeCanvasChromePresentation.cpp  NodeCanvasEditorCoordinator.cpp  NodeCanvasEditorCoordinator.h  NodeCanvasGlRenderer.cpp  NodeCanvasGlRenderer.h  NodeCanvasHitRouter.cpp  NodeCanvasHitRouter.h  NodeCanvasInteraction.cpp  NodeCanvasInteraction.h  NodeCanvasPresentation.cpp  NodeCanvasPresentation.h  NodeCanvasQueryModel.cpp  NodeCanvasQueryModel.h  NodeCanvasScene.cpp  NodeCanvasScene.h  NodeCanvasViewport.cpp  NodeCanvasViewport.h  NodeEditorCommandService.cpp  NodeEditorHost.cpp  NodeEditorHost.h  NodePalette.cpp  NodePalette.h  NodePaletteEntryIconRenderer.cpp  NodePaletteEntryIconRenderer.h  NodePaletteIconRenderer.cpp  NodePaletteIconRenderer.h  (+19 more)
cycle-v2/tests/: TestCurveNodeModels.cpp  TestEffect2DMeshState.cpp  TestEnvelopeMeshState.cpp  TestFftNodeDsp.cpp  TestGraphAudioExecutor.cpp  TestGraphCompiler.cpp  TestGraphEditor.cpp  TestGraphInvalidation.cpp  TestGraphNodeFactory.cpp  TestGraphPreviewExecutor.cpp  TestGraphRenderSemanticResolver.cpp  TestGraphRuntime.cpp  TestGraphSerializer.cpp  TestGraphTransaction.cpp  TestGraphValidator.cpp  TestNodeAudioProcessor.cpp  TestNodeCanvasArchitecture.cpp  TestNodeCanvasAuthoring.cpp  TestNodeCanvasEditorCoordinator.cpp  TestNodeCanvasHitRouter.cpp  TestNodeCanvasInteraction.cpp  TestNodeCanvasPresentation.cpp  TestNodeCanvasQueryModel.cpp  TestNodeDefinition.cpp  TestNodeDspConfiguration.cpp  TestNodeEditorHost.cpp  TestNodeModuleRegistry.cpp  TestNodePreviewProcessor.cpp  TestNodeUpdateGraph.cpp  TestRenderInvalidationAccumulator.cpp  TestSignalProbe.cpp  TestTrimeshInvalidation.cpp  TestTrimeshNodeDsp.cpp
cycle/JuceLibraryCode/: JuceHeader.h  include_juce_graphics_Harfbuzz.cpp
cycle/resources/: CycleVersion.h.in  Info.plist  Info.plist.in  JuceLV2Defines.h.in  PluginInfo.plist.in
cycle/tests/: TestV2VoiceRasterizer.cpp
docs/: juce.md  (+3 more)
installer/: CMakeLists.txt  README.md
installer/configs/: cycle.json  oscillo.json
installer/resources/: Info.plist
installer/src/: Main.cpp
lib/: CMakeLists.txt
lib/JuceLibraryCode/: JuceHeader.h  include_juce_graphics_Harfbuzz.cpp
lib/src/: Definitions.h
lib/tests/: RasterizerCompare.h  RasterizerParityHarness.h  SignalDebugger.h  TestAutoModeller.cpp  TestBuffer.cpp  TestCollisionDetector.cpp  TestConvReverb.cpp  TestCurveResolutionPolicy.cpp  TestCycleDelay.cpp  TestDefs.cpp  TestDefs.h  TestDepthProjectionPolicy.cpp  TestEffectParameterMapping.cpp  TestEnvRasterizer.cpp  TestEnvRasterizerFacade.cpp  TestEnvelopeGridRasterizer.cpp  TestEnvelopeMorphSurfaceRasterizer.cpp  TestEqualizerCore.cpp  TestFFT.cpp  TestFXRasterizerPointSource.cpp  TestFilterPoleMatching.cpp  TestGraphicRasterizer.cpp  TestInterceptRestrictionPolicy.cpp  TestIrModel.cpp  TestMeshRasterizer.cpp  TestMeshRasterizerFacade.cpp  TestMorphPosition.cpp  TestMultisample.cpp  TestOversampler.cpp  TestPaddingPolicy.cpp  TestPanelHostContext.cpp  TestPanelLinePath.cpp  TestPitchTracker.cpp  TestPointListRasterizer.cpp  TestPointScalingPolicy.cpp  TestPresetMigrator.cpp  TestRasterizerController.cpp  TestRasterizerParityHarness.cpp  TestRasterizerSnapshotBuilder.cpp  TestRasterizerStorage.cpp  (+20 more)
oscillo/: CMakeLists.txt  README.md
oscillo/content/: tuning-sample.json
oscillo/resources/: Info.plist  Oscillo.icns
oscillo/src/: AppSettings.h  GradientColorMap.h  Main.cpp  MainComponent.cpp  MainComponent.h  OscAudioProcessor.cpp  OscAudioProcessor.h  PhaseVelocityHistoryRenderer.cpp  PhaseVelocityHistoryRenderer.h  PianoComponent.cpp  PianoComponent.h  RealTimePitchTrace.h  RealTimePitchTracker.cpp  RealTimePitchTracker.h  TempermentControls.h
oscillo/tests/: TestOscAudioProcessor.cpp  TestRealTimePitchTracker.cpp
(+1490 files in other folders)
