project(Installer VERSION 0.1.0)

set(INSTALLER_DEFAULT_MANIFEST "${CMAKE_SOURCE_DIR}/cycle/installer.json")

file(GLOB_RECURSE INSTALLER_SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h"
)

set(INSTALLER_DEFINITIONS
    JUCE_PROJUCER_VERSION=0x80004
    JUCE_GLOBAL_MODULE_SETTINGS_INCLUDED=1
    JUCE_STRICT_REFCOUNTEDPOINTER=1
    JUCE_MODAL_LOOPS_PERMITTED=1
    JUCE_STANDALONE_APPLICATION=1
    JUCE_WEB_BROWSER=0
    JUCE_USE_CURL=0
    INSTALLER_DEFAULT_MANIFEST="${INSTALLER_DEFAULT_MANIFEST}"
    AMARANTH_SOURCE_DIR="${CMAKE_SOURCE_DIR}"
)

if(UNIX AND NOT APPLE)
    list(APPEND INSTALLER_DEFINITIONS LINUX=1)
elseif(APPLE)
    list(APPEND INSTALLER_DEFINITIONS MAC=1)
endif()

add_executable(${PROJECT_NAME} MACOSX_BUNDLE ${INSTALLER_SOURCES})

target_compile_definitions(${PROJECT_NAME} PRIVATE
    ${INSTALLER_DEFINITIONS}
    JUCE_APP_CONFIG_HEADER="${CMAKE_CURRENT_SOURCE_DIR}/src/incl/JucePluginDefines.h"
)

target_include_directories(${PROJECT_NAME} PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    ${CMAKE_CURRENT_SOURCE_DIR}/src/Core
    ${CMAKE_CURRENT_SOURCE_DIR}/src/UI
    ${CMAKE_CURRENT_SOURCE_DIR}/../lib/JuceLibraryCode
    ${JUCE_MODULES_DIR}
)

target_link_libraries(${PROJECT_NAME} PRIVATE
    AmaranthLib
)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(${PROJECT_NAME} PRIVATE -g -ggdb -O0)
else()
    target_compile_options(${PROJECT_NAME} PRIVATE -O3)
endif()

if(APPLE)
    set_target_properties(${PROJECT_NAME} PROPERTIES
        MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/resources/Info.plist
    )
endif()
